<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.sf.dz3</groupId>
    <artifactId>dz3-master</artifactId>
    <version>3.6.8-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>DIY Zoning Master Project</name>
    <url>http://diy-zoning.sourceforge.net/</url>
    <inceptionYear>2001</inceptionYear>
    <developers>
        <developer>
            <id>vtt</id>
            <name>Vadim Tkachenko</name>
            <email>vt@freehold.crocodile.org</email>
            <url>http://diy-zoning.blogspot.com/</url>
            <timezone>GMT-7</timezone>
            <roles>
                <role>Project Owner</role>
            </roles>
        </developer>
        <developer>
            <id>ddcarter</id>
            <name>David Carter</name>
            <email>david@carter.net</email>
            <timezone>EST</timezone>
            <roles>
                <role>Maven Repository Maintainer</role>
            </roles>
        </developer>
    </developers>
    <modules>
        <module>dz3-common</module>
        <module>dz3-sensors</module>
        <module>dz3-model</module>
        <module>dz3-spring</module>
        <module>dz3-owapi</module>
        <module>dz3-servomaster</module>
        <module>dz3-owfs</module>
        <module>dz3-swing</module>
        <module>dz3-scheduler</module>
        <module>dz3-scheduler-gcal-v3</module>
        <module>dz3-connector</module>
        <module>dz3-http</module>
        <module>dz3-influxdb</module>
        <module>dz3-mqtt</module>
        <module>dz3-xbee</module>
        <module>dz3-modelhome</module>
    </modules>
    <scm>
        <connection>scm:svn:https://diy-zoning.svn.sourceforge.net/svnroot/diy-zoning</connection>
        <developerConnection>scm:svn:https://diy-zoning.svn.sourceforge.net/svnroot/diy-zoning</developerConnection>
        <url>https://github.com/home-climate-control/dz</url>
    </scm>
    <issueManagement>
        <url>https://github.com/home-climate-control/dz/issues</url>
    </issueManagement>
    <repositories>
        <repository>
            <releases>
                <enabled>false</enabled>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>
    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jukebox.groupId>net.sf.jukebox</jukebox.groupId>
        <jukebox.version>7.0.0-SNAPSHOT</jukebox.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>3.3.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>${jukebox.groupId}</groupId>
                <artifactId>jukebox-service</artifactId>
                <version>${jukebox.version}</version>
            </dependency>
            <dependency>
                <groupId>${jukebox.groupId}</groupId>
                <artifactId>jukebox-datastream</artifactId>
                <version>${jukebox.version}</version>
            </dependency>
            <dependency>
                <groupId>${jukebox.groupId}</groupId>
                <artifactId>jukebox-jmx</artifactId>
                <version>${jukebox.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sf.servomaster</groupId>
                <artifactId>servomaster-common</artifactId>
                <version>2.0.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring</artifactId>
                <version>2.5.6</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.3.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.6</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>2.8.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.9.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Low</threshold>
                    <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>